--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"@reduxjs/toolkit": "^2.5.0",
 		"@testing-library/react": "^16.1.0",
 		"cra-template-typescript": "1.2.0",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
+		"react-redux": "^9.2.0",
 		"react-router": "^7.1.1",
 		"react-scripts": "5.0.1",
+		"redux-logger": "^3.0.6",
 		"styled-components": "^6.1.14",
 		"web-vitals": "^4.2.4"
 	},
@@ -39,6 +42,7 @@
 	"devDependencies": {
 		"@types/jest": "^29.5.14",
 		"@types/react": "^19.0.4",
-		"@types/react-dom": "^19.0.2"
+		"@types/react-dom": "^19.0.2",
+		"@types/redux-logger": "^3.0.13"
 	}
 }
