--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"private": true,
 	"dependencies": {
 		"@reduxjs/toolkit": "^2.5.0",
+		"@tanstack/react-query": "^5.64.0",
 		"@testing-library/react": "^16.1.0",
 		"axios": "^1.7.9",
 		"cra-template-typescript": "1.2.0",
@@ -14,6 +15,7 @@
 		"react-redux": "^9.2.0",
 		"react-router": "^7.1.1",
 		"react-scripts": "5.0.1",
+		"react-toastify": "^11.0.2",
 		"redux-logger": "^3.0.6",
 		"styled-components": "^6.1.14",
 		"web-vitals": "^4.2.4"
