--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"axios": "^1.7.9",
 		"cra-template-typescript": "1.2.0",
 		"react": "^19.0.0",
+		"react-device-detect": "^2.2.3",
 		"react-dom": "^19.0.0",
 		"react-hook-form": "^7.54.2",
 		"react-icons": "^5.4.0",
