--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
 	"name": "ums",
 	"version": "0.1.0",
 	"private": true,
+	"homepage": "/ums/",
 	"dependencies": {
 		"@reduxjs/toolkit": "^2.5.0",
 		"@tanstack/react-query": "^5.64.0",
 		"@testing-library/react": "^16.1.0",
 		"axios": "^1.7.9",
 		"cra-template-typescript": "1.2.0",
+		"express": "^4.21.2",
 		"react": "^19.0.0",
 		"react-device-detect": "^2.2.3",
 		"react-dom": "^19.0.0",
@@ -15,6 +17,7 @@
 		"react-icons": "^5.4.0",
 		"react-redux": "^9.2.0",
 		"react-router": "^7.1.1",
+		"react-router-dom": "^7.1.1",
 		"react-scripts": "5.0.1",
 		"react-toastify": "^11.0.2",
 		"redux-logger": "^3.0.6",
@@ -26,7 +29,7 @@
 		"build": "react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject",
-		"valid" : "sudo cp -R /home/server/UMS/build /var/www/UMS"
+		"valid": "sudo cp -R /home/server/UMS/build /var/www/UMS"
 	},
 	"eslintConfig": {
 		"extends": [
@@ -47,9 +50,12 @@
 		]
 	},
 	"devDependencies": {
+		"@types/express": "^4.17.21",
 		"@types/jest": "^29.5.14",
 		"@types/react": "^19.0.4",
 		"@types/react-dom": "^19.0.2",
-		"@types/redux-logger": "^3.0.13"
+		"@types/redux-logger": "^3.0.13",
+		"ts-node": "^10.9.2",
+		"typescript": "^5.7.3"
 	}
 }
