--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
 	"version": "0.1.0",
 	"private": true,
 	"homepage": "/ums/",
+	"type": "module",
 	"dependencies": {
 		"@reduxjs/toolkit": "^2.5.0",
 		"@tanstack/react-query": "^5.64.0",
 		"@testing-library/react": "^16.1.0",
 		"axios": "^1.7.9",
 		"cra-template-typescript": "1.2.0",
-		"express": "^4.21.2",
+		"express": "^4.17.1",
 		"react": "^19.0.0",
 		"react-device-detect": "^2.2.3",
 		"react-dom": "^19.0.0",
@@ -56,6 +57,6 @@
 		"@types/react-dom": "^19.0.2",
 		"@types/redux-logger": "^3.0.13",
 		"ts-node": "^10.9.2",
-		"typescript": "^5.7.3"
+		"typescript": "^4.9.5"
 	}
 }
