--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"@hookform/error-message": "^2.0.1",
 		"@reduxjs/toolkit": "^2.5.0",
 		"@tanstack/react-query": "^5.64.0",
 		"@testing-library/react": "^16.1.0",
@@ -26,7 +27,7 @@
 		"build": "react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject",
-		"valid" : "sudo cp -R /home/server/UMS/build /var/www/UMS"
+		"valid": "sudo cp -R /home/server/UMS/build /var/www/UMS"
 	},
 	"eslintConfig": {
 		"extends": [
