--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
 		"@types/jest": "^29.5.14",
 		"@types/react": "^19.0.4",
 		"@types/react-dom": "^19.0.2",
-		"@types/redux-logger": "^3.0.13"
+		"@types/redux-logger": "^3.0.13",
+		"prettier": "3.4.2"
 	}
 }
